[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "authstar"
authors = [{name = "John Wagenleitner", email = "johnwa@mail.fresnostate.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Authentication", "ASGI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
]
dynamic = ["version", "description"]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Home = "https://github.com/jowage58/authstar"
Source = "https://github.com/jowage58/authstar"

[dependency-groups]
dev = [
    "async-lru>=2.0.5",
    "fastapi>=0.115.12",
    "httptools>=0.6.4",
    "itsdangerous>=2.2.0",
    "joserfc>=1.1.0",
    "mypy>=1.16.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "python-multipart>=0.0.20",
    "starlette>=0.46.2",
    "uvicorn>=0.34.3",
    "uvloop>=0.21.0; sys_platform == 'linux'",
    "watchfiles>=1.0.5",
]

[tool.mypy]
packages = ["authstar", "example"]
strict = true
warn_unreachable = true

[tool.ruff]
target-version = "py311"
extend-exclude = [".*"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "A",  # shadowing builtins
    "ARG",  # unused arguments
    "ASYNC",  # async checks
    "B",  # bugbear
    "C4",  # comprehensions
    "DTZ",  # checks for naive datetimes
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate (commented out code)
    "F",  # Pyflakes
    "FBT",  # boolean trap
    "I",   # isort
    "ISC",  # Implicit String Concat
    "LOG",  # logging checks
    "N",  # pep8-naming
    "PIE",  # misc lints
    "PL",  # Pylint
    "PT",  # Pytest
    "PTH",  # favor pahtlib.Path
    "RET",  # returns
    "RUF",  # Ruff-specific rules
    "S",  # bandit
    "SIM",  # simplify
    "T20",  # print statements
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = ["ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105"]

[tool.ruff.lint.pylint]
max-args = 10
